# 4g_nic

./: .gitignore  AP配置JSON错误修复.md  AT指令拆分说明.md  AT指令更新总结.md  CMakeLists.txt  MEMORY_OPTIMIZATION_GUIDE.md  POST_Body数据完整性调试.md  README.md  READMEen.md  at指令实现.md  at指令说明.md  partitions_4mb.csv  readmecn.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old  多wan智能设计.md  新增AT指令说明.md  时区设置修复.md  调试.md  路由器at指令.md  路由器解决方案.md
PCSoftware/: .gitignore  4g_nic_pc.spec  AT指令同步说明.md  AT指令说明.md  README.md  build_windows.bat  main.py  requirements-build.txt  requirements.txt
app/: README.md  pubspec.yaml  readmecn.md
chat/: esp-iot-bridge_STA与SoftAP同时启用使用说明.md  idx文件说明与chat记录.md
components/ble_settings/: CMakeLists.txt  README.md  ble_settings.c
components/ble_settings/include/: ble_settings.h
components/system/: CMakeLists.txt  Kconfig  README.md  system_bridge_runtime.c  system_eth_uplink_debug.c  system_hw_presence.c  system_mode_manager.c  system_napt_compat.c  system_sta_baidu_probe.c  system_stability.c  system_usb_cat1_detect.c  system_w5500_detect.c  system_wifi_dual_connect.c
components/system/include/: system_bridge_runtime.h  system_eth_uplink_debug.h  system_hw_presence.h  system_mode_manager.h  system_sta_baidu_probe.h  system_stability.h  system_usb_cat1_detect.h  system_w5500_detect.h  system_wifi_dual_connect.h
doc/: AP配置错误排查.md  ble_protocol.md  ble_protocolcn.md  命令.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
mcuppp/: README.md
spiNetwork/: ARCHITECTURE_SUMMARY.md  README.md  README_SPI_PPP.md
spiNetwork/rp2040_pico_host/: CMakeLists.txt  README.md  main.c
tools/: export_managed_component_patches.py
(+203 files in other folders)
